--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/style.css">
+    <!-- icons -->
+    <link href="font_awesome/css/all.css" rel="stylesheet" />
     <title>Codar.</title>
 </head>
 
 <body>
     <!--NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container justify-content-between>
-            <div class=" navbar-nav">
-            <a class="navbar-brand" href="#">
-                <i>
-                    <b class="nav-codar">Codar.</b>
-                </i>
-            </a>
-        </div>
-        <div class="navbar-nav">
-            <a class="nav-link active" href="#">Início</a>
-            <a class="nav-link active" href="#">Serviços</a>
-            <a class="nav-link active" href="#">Contato</a>
-            <a class="nav-item btn btn-danger btn-red" href="#">Login<a>
-        </div>
-        </div>
-    </nav>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container justify-content-between">
+                <a class="navbar-brand" href="#">
+                    <i><b class="nav-codar">Codar.</b></i>
+                </a>
+            </div>
+            <div class="navbar-nav">
+                <a class="nav-link active" href="#">Início</a>
+                <a class="nav-link active" href="#">Serviços</a>
+                <a class="nav-link active" href="#">Contato</a>
+                <a class="nav-item btn btn-danger btn-red" href="#">Login<a>
+            </div>
+        </nav>
+    </header>
     <main>
         <div class="container box">
             <!-- Primeira parte do main -->
@@ -91,77 +96,84 @@
                 </div>
             </div>
             <!--Celular-->
+
             <div class="container">
-                <nav class="navbar">
-                    <div class="container mb-2">
-                        <h5> <b> Nossa equipe está à disposição!</b></h5>
-
-                    </div>
-                    <div class="container-fluid">
-                        <form class="d-flex col-6">
-                            <input class="form-control me-2 " type="search" placeholder="Celular" aria-label="Search"
-                                style="border-radius: 10px;">
-                            <button class="nav-item btn btn-danger btn-red-main" type="submit">Ligamos pra você</button>
-                        </form>
-                    </div>
-                </nav>
+                <div class="">
+                    <h5><b> Nossa equipe está à disposição!</b></h5>
+                </div>
+                <div>
+                    <input class="py-2 p-2" type="text" placeholder="Celular" aria-label="Search" style="border-radius: 10px; box-shadow: 0 0 0 0;
+        border:0;
+        outline: 0; background-color: rgb(206, 206, 206);">
+                    <button class="nav-item btn btn-danger btn-red-main p-2 my-3 mx-1" type="submit">Ligamos pra
+                        você</button>
+                </div>
             </div>
-        </div>
 
+
+            <div class="container" style="display: flex; margin-top:100px; margin-bottom: 50px;">
+                <article class="d-flex position-relative mx-2">
+                    <div>
+                        <button class="btn-circle-red mt-4 mx-2"></button>
+                    </div>
+                    <div class="container">
+                        <span>Já tive experiências com outras 4 empresas da área e a Codar é sem sombra de dúvidas
+                            superior em todos os aspectos.</span>
+                        <h5><b>Pedro Ferreira</b></h5>
+                        <span>Construtora Minari</span>
+                    </div>
+                </article>
+                <article class="d-flex position-relative mx-2">
+                    <div>
+                        <button class="btn-circle-red mt-4 mx-2">
+                        </button>
+                    </div>
+                    <div class="container">
+                        <span>Já tive experiências com outras 4 empresas da área e a Codar é sem sombra de dúvidas
+                            superior em todos os aspectos.</span>
+                        <h5><b>Pedro Ferreira</b></h5>
+                        <span>Construtora Minari</span>
+                    </div>
+                </article>
+            </div>
     </main>
 
-
-
-
-
-
-
+    <footer class="mt-5" style="color: white;">
+        <div class="container">
+            <div class="row p-5">
+                <div class="col-6 col-md">
+                    <i><b class="" style="font-size: 40px;">Codar.</b></i>
+                    <p>Criamos websites incríveis</p>
+                </div>
+                <div class="col-6 col-md mt-4">
+                    <span><b>Sobre</b></span>
+                    <p>Amamos criar soluções e entregar sites incríveis</p>
+                </div>
+                <div class="col-6 col-md mt-4">
+                    <span><b>Contato</b></span>
+                    <p>123 Av. Manjar - Nárnia</p>
+                    <p>+55 96 2321-3131</p>
+                    <p>contato@codar.com</p>
+                </div>
+                <div class="col-6 col-md mt-4">
+                    <div class="col-6 col-md">
+                        <span><b>Redes Sociais</b></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
-<!-- icons -->
-<link href="font_awesome/css/all.css" rel="stylesheet" />
+
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
-<!-- CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-<!-- CSS -->
-<link rel="stylesheet" href="assets/style.css">
+
 
 </html>
-
-
-Codar.
-Início Serviços Contato Login
-Alavanque seu negócio com um
-Website incrível
-Solicitar orçamento
-Domínio personalizado
-Hospedagem
-Site responsivo
-Redes sociais
-Chat online
-Blog integrado
-Nossa equipe está à disposição!
-Celular Ligamos pra você
-Já tive experiências com outras 4 empresas da área e a Codar é sem sombra de dúvidas superior em todos os aspectos.
-Pedro Ferreira Construtora Minari
-Processos bem simples e criação de um site exatamente como a minha escola queria!
-Maria Rita
-Escola Criança Feliz
-Codar.
-Criamos websites incríveis
-Sobre
-Amamos criar soluções
-e entregar sites incríveis
-Contato
-123 Av. Manjar - Nárnia
-+55 96 2321-3131
-contato@codar.com
-Redes sociais
